# wsi-pyside-desktop-app-template

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: 01-inicio-rapido.md  02-arquitetura.md  03-estrutura-do-projeto.md  04-criando-uma-feature.md  05-criando-um-componente.md  06-biblioteca-de-componentes.md  07-servicos.md  08-navegacao.md  09-tema-e-estilos.md  10-layout-responsivo.md  11-modelos-e-repositorios.md  12-event-bus.md  13-testes.md  14-build-e-empacotamento.md  README.md
docs/en/: ARCHITECTURE.md  COMPONENTS.md
docs/pt-br/: README.md
resources/config/: default_settings.json
resources/styles/: base.qss  dark.qss  light.qss
src/: __init__.py  app.py
src/components/: __init__.py  base.py
src/components/buttons/: __init__.py  icon_button.py  primary_button.py  secondary_button.py  toggle_button.py
src/components/cards/: __init__.py  action_card.py  basic_card.py  info_card.py
src/components/dialogs/: __init__.py  alert_dialog.py  base_dialog.py  confirm_dialog.py  form_dialog.py
src/components/feedback/: __init__.py  badge.py  progress_bar.py  spinner.py  toast.py
src/components/forms/: __init__.py  checkbox.py  form_field.py  radio_group.py  select_input.py  text_input.py
src/components/icons/: __init__.py  icon.py
src/components/layout/: __init__.py  content_area.py  footer.py  grid.py  header.py  sidebar.py
src/components/tables/: __init__.py  data_table.py  list_view.py  tree_view.py
src/controllers/: __init__.py  base.py  home_controller.py  settings_controller.py  showcase_controller.py
src/core/: __init__.py  application.py  base_page.py  container.py  exceptions.py  signals.py  types.py
src/factories/: __init__.py  component_factory.py  dialog_factory.py  page_factory.py
src/features/: __init__.py  registry.py
src/features/dashboard/: __init__.py  controller.py  page.py
src/features/home/: __init__.py  controller.py  page.py
src/features/responsive_demo/: __init__.py  page.py
src/features/settings/: __init__.py  controller.py  page.py
src/features/showcase/: __init__.py  controller.py  page.py
src/models/: __init__.py  base.py  settings.py  user.py
src/models/repositories/: __init__.py  base.py  settings_repository.py  user_repository.py
src/services/: __init__.py  base.py  config_service.py  logger_service.py  navigation_service.py  storage_service.py  theme_service.py
src/utils/: __init__.py  decorators.py  helpers.py  validators.py
src/views/: __init__.py  home.py  main_window.py  settings.py
src/views/components/: __init__.py  (+2 more)
tests/: __init__.py  conftest.py
(+52 files in other folders)
